--- a/logistica.html
+++ b/logistica.html
@@ -153,19 +153,34 @@
             </div>
 
             <!-- Hospedaje -->
-            <div class="card border-0 ">
-              <div class="card-header border-top bg-white p-0 m-0">
-                <a href= "#item-2" class="btn w-100 rounded-0">
-                  <div class="font-weight-bold text-primary text-left" id="headingHospedaje" data-toggle="collapse" data-target="#collapseHospedaje" aria-expanded="false">
-                    Hospedaje</div>
-                </a>
+            <div class="card border-0">
+              <div class="card-header bg-white p-0 m-0">
+                <div class="btn w-100" id="headingHospedaje" data-toggle="collapse" data-target="#collapseHospedaje" aria-expanded="false">
+                    <div class="row ">
+                      <div class="col-9 text-center">
+                        <p class="font-weight-bold text-primary my-0 text-left">Hospedaje</p>
+                      </div>
+                      <div class="col-3 text-right">
+                        <i class="fa fa-chevron-down text-secondary "></i>
+                      </div>
+                    </div>
+                </div>
+
               </div>
 
+              <div id="collapseHospedaje" class="collapse" aria-labelledby="headingHospedaje" data-parent="#sideLogistica">
+                <div class="card-body p-0">
+                  <div class="list-group list-group-flush m-0">
+                    <a href="#hospedaje-oficial" class="list-group-item list-group-item-action text-primary py-2">Hospedaje Oficial</a>
+                    <a href="#hospedaje-alternativo" class="list-group-item list-group-item-action text-primary py-2">Hospedajes Alternativos</a>
+                  </div>
+                </div>
+              </div>
             </div>
 
             <!-- Sede Oficial -->
             <div class="card border-0">
-              <div class="card-header bg-white p-0 m-0">
+              <div class="card-header bg-white p-0 m-0 border-top">
                 <a href= "#item-3" class="btn w-100 rounded-0">
                   <div class="font-weight-bold text-primary text-left" id="headingSede" data-toggle="collapse" data-target="#collapseHospedaje" aria-expanded="false">
                     Sede Oficial</div>
@@ -322,12 +337,12 @@
 
             <div id="dinamica-del-evento" class="right-block">
               <h4 class="display-6 font-italic font-weight-bold">Dinámica del Evento</h4>
-              <p>La agenda de actividades se extiende hasta los horarios nocturnos, por lo que es indispensable que quienes se
+              <p class="text-justify">La agenda de actividades se extiende hasta los horarios nocturnos, por lo que es indispensable que quienes se
                 inscriban sean mayores de edad o estén acompañados de sus tutores legales.</p>
 
                 <p class="font-weight-bold">Para participar es requerido completar el proceso de registro.</p>
 
-                <p>El ECSL es un evento sin fines de lucro y es por medio de las cuotas de participación que se financian los equipos,
+                <p class="text-justify">El ECSL es un evento sin fines de lucro y es por medio de las cuotas de participación que se financian los equipos,
                 herramientas, materiales, alimentación entre otras necesidades que requiere el poder realizarlo, también se cuenta
                 con el aporte que realizan diversas entidades patrocinadoras.</p>
 
@@ -433,6 +448,41 @@
             <h4 class="display-6 font-italic font-weight-bold">Formas de Participación</h4>
             <p>Proximamente estaremos informando sobre los medios oficiales de participación en el ECSL con mayor detalle..</p>
           </div>
+
+          <hr>
+
+          <div id="hospedaje-oficial" class="right-block">
+            <h4 class="display-6 font-italic font-weight-bold">Hospedaje Oficial (Centro Loyola)</h4>
+            <p class="text-justify">El Centro Loyola es el lugar donde se hospedaran los participantes que adquirieron su
+              paquete completo de participación al ECSL está ubicado en Calle Teotl No.35, Colonia Altos de Guadalupe,
+              Antiguo Cuscatlán, La Libertad, El Salvador a 20 minutos caminando de la Universidad Centroamericana
+              “José Simeon Cañas” (UCA) sede del ECSL 2018.
+               <br><br>
+               A la fecha, se ha realizado en Nicaragua (2009), Costa Rica (2010), El Salvador (2011), Guatemala (2012),
+               Belize (2013), Panamá (2014), Honduras (2015),  Nicaragua (2016) y Costa Rica (2017). En su decima edición,
+               se realizará en la ciudad de San Salvador, El Salvador los días 19, 20 y 21 de junio del 2018.
+              <br><br>
+              Es un evento abierto para todo el público interesado en el aprender y compartir sobre diversas temáticas acerca
+              de tecnologías libres pero principalmente sobre Software Libre, está es una celebración donde te encontraras con
+              entusiastas, estudiantes y profesionales; un espacio para relacionarte y hacer nuevas amistades y contactos que
+              compartirán contigo la pasión por liberar el conocimiento para el beneficio de las personas.</p>
+
+              <div class="embed-responsive embed-responsive-16by9">
+                <iframe class="embed-responsive-item" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3084.2521595938847!2d-89.23823788762095!3d13.671825544234894!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f6331cfc77882f9%3A0xdbc6907706f0e897!2sCentro+de+Retiro+San+Ignacio+de+Loyola!5e1!3m2!1sen!2sus!4v1516681227179"
+                width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+              </div>
+
+
+              <br>
+
+              <p>
+                Si desea más detalles, puede utilizar esta información de contacto:<br>
+                Teléfono: (+503) 2227-3803 <br>
+                Correo electrónico: <a href="mailto:cloyolasj@gmail.com">cloyolasj@gmail.com </a>.<br>
+                Sitio web: <a href="http://centroloyolasj.blogspot.com/">Centro Loyola El Salvador</a> <br>
+                Fans Page: <a href="https://www.facebook.com/centroloyola.elsalvador">Centro Loyola El Salvador</a> <br>
+              </p>
+            </div>
 
         </div>
       </div>
