--- a/logistica.html
+++ b/logistica.html
@@ -154,7 +154,7 @@
 
             <!-- Hospedaje -->
             <div class="card border-0">
-              <div class="card-header bg-white p-0 m-0">
+              <div class="card-header bg-white p-0 m-0 border-top">
                 <div class="btn w-100" id="headingHospedaje" data-toggle="collapse" data-target="#collapseHospedaje" aria-expanded="false">
                     <div class="row ">
                       <div class="col-9 text-center">
@@ -181,8 +181,8 @@
             <!-- Sede Oficial -->
             <div class="card border-0">
               <div class="card-header bg-white p-0 m-0 border-top">
-                <a href= "#item-3" class="btn w-100 rounded-0">
-                  <div class="font-weight-bold text-primary text-left" id="headingSede" data-toggle="collapse" data-target="#collapseHospedaje" aria-expanded="false">
+                <a href= "#sede-oficial" class="btn w-100 rounded-0">
+                  <div class="font-weight-bold text-primary text-left" data-target="#collapseHospedaje" aria-expanded="false">
                     Sede Oficial</div>
                 </a>
               </div>
@@ -208,8 +208,8 @@
               <div id="collapseTravelInfo" class="collapse" aria-labelledby="headingTravelInfo" data-parent="#sideLogistica">
                 <div class="card-body p-0">
                   <div class="list-group list-group-flush m-0">
-                    <a href="#item-1-1" class="list-group-item list-group-item-action text-primary py-2">Aéreo</a>
-                    <a href="#" class="list-group-item list-group-item-action text-primary py-2">Terrestre</a>
+                    <a href="#aereo" class="list-group-item list-group-item-action text-primary py-2">Aéreo</a>
+                    <a href="#terrestre" class="list-group-item list-group-item-action text-primary py-2">Terrestre</a>
                   </div>
                 </div>
               </div>
@@ -326,7 +326,7 @@
                <br><br>
                A la fecha, se ha realizado en Nicaragua (2009), Costa Rica (2010), El Salvador (2011), Guatemala (2012),
                Belize (2013), Panamá (2014), Honduras (2015),  Nicaragua (2016) y Costa Rica (2017). En su decima edición,
-               se realizará en la ciudad de San Salvador, El Salvador los días 19, 20 y 21 de junio del 2018.
+               se realizará en la ciudad de San Salvador, El Salvador los días 12 y 13 de julio del 2018.
               <br><br>
               Es un evento abierto para todo el público interesado en el aprender y compartir sobre diversas temáticas acerca
               de tecnologías libres pero principalmente sobre Software Libre, está es una celebración donde te encontraras con
@@ -458,31 +458,150 @@
               Antiguo Cuscatlán, La Libertad, El Salvador a 20 minutos caminando de la Universidad Centroamericana
               “José Simeon Cañas” (UCA) sede del ECSL 2018.
                <br><br>
-               A la fecha, se ha realizado en Nicaragua (2009), Costa Rica (2010), El Salvador (2011), Guatemala (2012),
-               Belize (2013), Panamá (2014), Honduras (2015),  Nicaragua (2016) y Costa Rica (2017). En su decima edición,
-               se realizará en la ciudad de San Salvador, El Salvador los días 19, 20 y 21 de junio del 2018.
-              <br><br>
-              Es un evento abierto para todo el público interesado en el aprender y compartir sobre diversas temáticas acerca
-              de tecnologías libres pero principalmente sobre Software Libre, está es una celebración donde te encontraras con
-              entusiastas, estudiantes y profesionales; un espacio para relacionarte y hacer nuevas amistades y contactos que
-              compartirán contigo la pasión por liberar el conocimiento para el beneficio de las personas.</p>
+               Estas son algunas de las características del alojamiento:
+               <ul>
+                 <li>Acceso a internet por medio de red wifi.</li>
+                 <li>Habitaciones y baños compartidos.</li>
+                 <li>Espacios comunes para socializar.</li>
+                 <li>Ubicación en una zona tranquila y segura.</li>
+               </ul>
+
+              </p>
 
               <div class="embed-responsive embed-responsive-16by9">
                 <iframe class="embed-responsive-item" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3084.2521595938847!2d-89.23823788762095!3d13.671825544234894!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f6331cfc77882f9%3A0xdbc6907706f0e897!2sCentro+de+Retiro+San+Ignacio+de+Loyola!5e1!3m2!1sen!2sus!4v1516681227179"
                 width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
               </div>
-
-
               <br>
-
               <p>
-                Si desea más detalles, puede utilizar esta información de contacto:<br>
+                Si desea más detalles, puede utilizar esta información de contacto:<br><br>
                 Teléfono: (+503) 2227-3803 <br>
                 Correo electrónico: <a href="mailto:cloyolasj@gmail.com">cloyolasj@gmail.com </a>.<br>
                 Sitio web: <a href="http://centroloyolasj.blogspot.com/">Centro Loyola El Salvador</a> <br>
                 Fans Page: <a href="https://www.facebook.com/centroloyola.elsalvador">Centro Loyola El Salvador</a> <br>
               </p>
             </div>
+
+            <div id="hospedaje-alternativo" class="right-block">
+              <h4 class="display-6 font-italic font-weight-bold">Hospedajes Alternativos</h4>
+              <p class="text-justify">Si desea reservar un lugar de alojamiento por su cuenta, se le recomienda las siguientes alternativas:</p>
+
+              <p>Proximamente...</p>
+            </div>
+
+            <hr>
+
+            <div id="sede-oficial" class="right-block">
+              <h3 class="font-weight-bold">Sede Oficial (UCA)</h3>
+              <p class="text-justify">El evento se llevará a cabo en el Edificio ICAS de la Universidad Centroamericana
+                “José Simeon Cañas” (UCA) los días 12 y 13 de Julio del 2018, su ubicación es en El Bulevar Los Próceres,
+                Antiguo Cuscatlán, La Libertad, El Salvador, Centroamérica.
+                 <br><br>
+                La Universidad Centroamericana “José Simeon Cañas” (UCA) cuenta con un campus de 148,351.20 metros cuadrados,
+                aproximadamente 21 manzanas.</p>
+
+              <p>
+                Si desea más detalles, puede utilizar esta información de contacto:<br><br>
+                Teléfono: (+503) 2210-6600 <br>
+                Correo electrónico: <a href="direccion.comunicaciones@uca.edu.sv">direccion.comunicaciones@uca.edu.sv</a>.<br>
+                Sitio web: <a href="http://www.uca.edu.sv/">Universidad Centroamericana “José Simeon Cañas”</a> <br>
+                Fans Page: <a href="https://www.facebook.com/UCA.ElSalvador">UCA El Salvador</a> <br>
+              </p>
+
+              </div>
+
+              <hr>
+
+              <div id="aereo" class="right-block">
+                <h4 class="display-6 font-italic font-weight-bold">Aérea</h4>
+                <p class="text-justify">La forma más rápida para llegar a El Salvador es por avión. El Salvador cuenta con el aeropuerto Internacional
+                  Monseñor Romero que se encuentra a 45 minutos de la sede del evento en cualquier automovil.
+                  <br><br>
+                  Del aeropuerto puede tomar un taxi hacia el Centro Loyola. Los taxis en El Salvador no cuentan con taxímetro y la tarifa
+                  se negocia con el taxista antes de abordar el vehículo. También puede optar por el servicio de UBER para dirigirse hacia el
+                  lugar de hospedaje.</p>
+
+                  <div class="embed-responsive embed-responsive-16by9">
+                    <iframe class="embed-responsive-item" src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d248225.3098415193!2d-89.14756444999999!3d13.564982550000002!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e0!4m5!1s0x8f7cb68084f5c48f%3A0xaff9539ed52e360d!2sAeropuerto+Internacional+de+El+Salvador!3m2!1d13.445137899999999!2d-89.0570357!4m5!1s0x8f6331cd305c735b%3A0x3d2a75b3761d4ded!2sUniversidad+Centroamericana+Jos%C3%A9+Sime%C3%B3n+Ca%C3%B1as%2C+Bulevar+Los+Proceres%2C+San+Salvador!3m2!1d13.6810526!2d-89.2357263!5e0!3m2!1ses!2ssv!4v1516678435332"
+                    width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+                  </div>
+              </div>
+
+                <br>
+              <div id="terrestre" class="right-block">
+                <h4 class="display-6 font-italic font-weight-bold">Terrestre</h4>
+                <p class="text-justify">Llegar a San Salvador por tierra es la opción más viable para las personas que vienen de los países centroamericanos,
+                  aconsejamos verificar precios y asegúrese de consultar las promociones y descuentos especiales directamente con cada
+                  empresa de transporte.</p>
+
+                  <ul>
+                    <li class="text-justify">
+                      <p class="font-weight-bold mb-0">Platinum:</p>
+                      <p class="">Tiene un servicio de transporte con atención de primera clase hacia San Salvador, El Salvador y tiene
+                      sus puertos de salida en Guatemala, Honduras y Nicaragua posee rutas clase Platinum, King y Quality  los precios
+                      van desde $69.00 USD. Más infotmación en el <a href="http://www.platinumcentroamerica.com/">sitio web de Platinum.</a></p>
+                    </li>
+
+                    <li class="text-justify">
+                      <p class="font-weight-bold mb-0">TicaBus:</p>
+                      <p class="">Tiene servicio de transporte de mediano costo hacia San Salvador, El Salvador y tiene puertos de salida
+                        en Guatemala, Honduras, NIcaragua y Costa Rica posee rutas turistica y ejecutiva los precio van desde $72.00 USD.
+                        hasta $131.00 USD.  Más infotmación en el <a href="http://ticabus.com/ ">sitio web de Ticabus.</a></p>
+                    </li>
+
+                    <li class="text-justify">
+                      <p class="font-weight-bold mb-0">Transportes del Sol:</p>
+                      <p class="">Tes una de las opciones más económicas para viajar a San Salvador, El Salvador poseen cuota diferencial
+                        entre adultos y menores de edad sus puertos de salida están ubicados unicamente en Guatemala, Nicaragua y Costa Rica;
+                        los precio van desde $50.00 USD. hasta $120.00 USD. <a href="http://www.transportedelsol.com/">sitio web de Transportes del Sol.</a></p>
+                    </li>
+                  </ul>
+
+              </div>
+
+              <div id="movilizacion" class="right-block">
+                <h3 class="font-weight-bold">Movilizacion</h3>
+                <p class="text-justify">Para movilizarse del lugar de hospedaje hacia la sede del ECSL-2018 existen varias opciones que se describen a continuación:</p>
+              </div>
+
+              <div id="servicio-de-autobuses" class="right-block">
+                <h4 class="display-6 font-italic font-weight-bold">Servicio de Autobuses</h4>
+                <p class="text-justify">En El Salvador es posible llegar prácticamente a cualquier lugar utilizando el servicio de autobuses.
+                  <br><br>
+                  La rutas que llegan a la Universidad Centroamericana “José Simeón Cañas” (UCA):
+                  <ul>
+                    <li>Ruta 44</li>
+                    <li>...</li>
+                    <li>...</li>
+                    <li>...</li>
+                  </ul>
+                </p>
+              </div>
+
+              <div id="servicio-de-taxis" class="right-block">
+                <h4 class="display-6 font-italic font-weight-bold">Servicio de taxis</h4>
+                <p class="text-justify">Los taxis no cuentan con taxímetro, la tarifa se negocia con el taxista antes de abordar el vehículo.
+                  El costo promedio para desplazarse desde la Universidad Centroamericana “José Simeón Cañas” (UCA) sede del evento y el Centro
+                  Loyola es de $ 5.00 dólares.
+                  <br><br>
+                  Cabe destacar que a la salida hacia la calle “La Sultana” de la Universidad Centroamericana “José Simeón Cañas” (UCA) se ubica
+                  un punto de taxis de los cuales puede hacer uso en el horario que usted desee.
+                  </p>
+              </div>
+
+              <div id="servicio-de-UBER" class="right-block">
+                <h4 class="display-6 font-italic font-weight-bold">Servicio UBER</h4>
+                <p class="text-justify">También puede optar por el servicio <a href="https://www.uber.com/es-ES/cities/san-salvador/">Uber</a>, para lo cual previamente debe instalar la respectiva app y configurar una cuenta.
+                  En El Salvador se ofrece la opción de UberX (4 personas). Puede pagar el servicio con tarjeta de débito/crédito o con dinero
+                  en efectivo en dólares.</p>
+                <p>
+                  Para consultar estimación de tarifas, puede dirigirse a <a href="https://www.uber.com/es-ES/fare-estimate/">este enlace.</a>
+                </p>
+              </div>
+
+
+
+
 
         </div>
       </div>
