--- a/logistica.html
+++ b/logistica.html
@@ -22,7 +22,7 @@
 
 </head>
 
-<body>
+<body data-spy="scroll" data-target="#sideLogistica">
 
   <!-- Barra de Navegacion -->
   <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
@@ -141,12 +141,12 @@
             <div id="collapseParticipation" class="collapse show" aria-labelledby="headingParticipation" data-parent="#sideLogistica">
               <div class="card-body p-0">
                 <div class="list-group list-group-flush m-0">
-                  <a href="#participacion" class="list-group-item list-group-item-action text-primary py-2">Reseña</a>
-                  <a href="#dinamica-del-evento" class="list-group-item list-group-item-action text-primary py-2">Dinámica del evento</a>
-                  <a href="#cuota-de-participacion" class="list-group-item list-group-item-action text-primary py-2">Cuota de participación</a>
-                  <a href="#paquete-en-swag" class="list-group-item list-group-item-action text-primary py-2">Paquetes en Swag</a>
-                  <a href="#forma-de-pago" class="list-group-item list-group-item-action text-primary py-2">Forma de pago</a>
-                  <a href="#formas-de-participacion" class="list-group-item list-group-item-action text-primary py-2">Formas de participación</a>
+                  <a href="#participacion" class="list-group-item list-group-item-action py-2">Reseña</a>
+                  <a href="#dinamica-del-evento" class="list-group-item list-group-item-action py-2">Dinámica del evento</a>
+                  <a href="#cuota-de-participacion" class="list-group-item list-group-item-action py-2">Cuota de participación</a>
+                  <a href="#paquete-en-swag" class="list-group-item list-group-item-action py-2">Paquetes en Swag</a>
+                  <a href="#forma-de-pago" class="list-group-item list-group-item-action py-2">Forma de pago</a>
+                  <a href="#formas-de-participacion" class="list-group-item list-group-item-action py-2">Formas de participación</a>
                 </div>
               </div>
             </div>
@@ -171,8 +171,8 @@
             <div id="collapseHospedaje" class="collapse" aria-labelledby="headingHospedaje" data-parent="#sideLogistica">
               <div class="card-body p-0">
                 <div class="list-group list-group-flush m-0">
-                  <a href="#hospedaje-oficial" class="list-group-item list-group-item-action text-primary py-2">Hospedaje Oficial</a>
-                  <a href="#hospedaje-alternativo" class="list-group-item list-group-item-action text-primary py-2">Hospedajes Alternativos</a>
+                  <a href="#hospedaje-oficial" class="list-group-item list-group-item-action py-2">Hospedaje Oficial</a>
+                  <a href="#hospedaje-alternativo" class="list-group-item list-group-item-action py-2">Hospedajes Alternativos</a>
                 </div>
               </div>
             </div>
@@ -208,8 +208,8 @@
             <div id="collapseTravelInfo" class="collapse" aria-labelledby="headingTravelInfo" data-parent="#sideLogistica">
               <div class="card-body p-0">
                 <div class="list-group list-group-flush m-0">
-                  <a href="#aereo" class="list-group-item list-group-item-action text-primary py-2">Aéreo</a>
-                  <a href="#terrestre" class="list-group-item list-group-item-action text-primary py-2">Terrestre</a>
+                  <a href="#aereo" class="list-group-item list-group-item-action py-2">Aéreo</a>
+                  <a href="#terrestre" class="list-group-item list-group-item-action py-2">Terrestre</a>
                 </div>
               </div>
             </div>
@@ -234,9 +234,9 @@
             <div id="collapseMovilizacion" class="collapse" aria-labelledby="headingMovilizacion" data-parent="#sideLogistica">
               <div class="card-body p-0">
                 <div class="list-group list-group-flush m-0">
-                  <a href="#servicio-de-autobuses" class="list-group-item list-group-item-action text-primary py-2">Servicio de Autobuses</a>
-                  <a href="#servicio-de-taxis" class="list-group-item list-group-item-action text-primary py-2">Servicio de taxis</a>
-                  <a href="#servicio-de-UBER" class="list-group-item list-group-item-action text-primary py-2">Servicio UBER</a>
+                  <a href="#servicio-de-autobuses" class="list-group-item list-group-item-action py-2">Servicio de Autobuses</a>
+                  <a href="#servicio-de-taxis" class="list-group-item list-group-item-action py-2">Servicio de taxis</a>
+                  <a href="#servicio-de-UBER" class="list-group-item list-group-item-action py-2">Servicio UBER</a>
                 </div>
               </div>
             </div>
@@ -261,14 +261,14 @@
             <div id="collapseInfoESA" class="collapse" aria-labelledby="headingInfoESA" data-parent="#sideLogistica">
               <div class="card-body p-0">
                 <div class="list-group list-group-flush m-0">
-                  <a href="#moneda-local" class="list-group-item list-group-item-action text-primary py-1">Moneda Local</a>
-                  <a href="#electricidad" class="list-group-item list-group-item-action text-primary py-1">Electricidad</a>
-                  <a href="#hospitales" class="list-group-item list-group-item-action text-primary py-1">Hospitales</a>
-                  <a href="#telefonia" class="list-group-item list-group-item-action text-primary py-1">Telefonía</a>
-                  <a href="#gastronomia" class="list-group-item list-group-item-action text-primary py-1">Gastronomía</a>
-                  <a href="#condiciones-del-clima" class="list-group-item list-group-item-action text-primary py-1">Condiciones del Clima</a>
-                  <a href="#fumado" class="list-group-item list-group-item-action text-primary py-1">Fumado y Tabaco</a>
-                  <a href="#alcohol" class="list-group-item list-group-item-action text-primary py-1">Alcohol</a>
+                  <a href="#moneda-local" class="list-group-item list-group-item-action py-1">Moneda Local</a>
+                  <a href="#electricidad" class="list-group-item list-group-item-action py-1">Electricidad</a>
+                  <a href="#hospitales" class="list-group-item list-group-item-action py-1">Hospitales</a>
+                  <a href="#telefonia" class="list-group-item list-group-item-action py-1">Telefonía</a>
+                  <a href="#gastronomia" class="list-group-item list-group-item-action py-1">Gastronomía</a>
+                  <a href="#condiciones-del-clima" class="list-group-item list-group-item-action py-1">Condiciones del Clima</a>
+                  <a href="#fumado" class="list-group-item list-group-item-action py-1">Fumado y Tabaco</a>
+                  <a href="#alcohol" class="list-group-item list-group-item-action py-1">Alcohol</a>
                 </div>
               </div>
             </div>
@@ -885,7 +885,7 @@
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-  <!-- <script type="text/javascript" src="./js/functionalities.js"></script> -->
+  <script type="text/javascript" src="./js/functionalities.js"></script>
 
 </body>
 
